--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "github-actions-js-demo",
   "version": "1.0.0",
   "description": "",
-  "test": "jest",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
