--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,10 @@ jobs:
         node-version: 18
 
     - name: Install dependencies
-      run: npm install
+      run: npm ci
+
+    - name: Show jest binary permissions
+      run: ls -la node_modules/.bin/
 
     - name: Run tests
-      run: npm test
+      run: npx jest
