--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,17 +16,27 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
+    - name: Show current directory and files
+      run: |
+        pwd
+        ls -la
+
     - name: Set up Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
 
     - name: Install dependencies
-      run: npm ci
+      run: |
+        cd github-actions-js-demo
+        npm ci
 
     - name: Run ESLint
-      run: npx eslint .
+      run: |
+        cd github-actions-js-demo
+        npx eslint .
 
     - name: Run tests
-      run: npx jest
-      ## яысфывфывыфвфы
+      run: |
+        cd github-actions-js-demo
+        npx jest
