--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Install dependencies
-      run: |
-        cd github-actions-js-demo
-        npm ci
+      run: npm ci
 
     - name: Run ESLint
       run: npx eslint .
@@ -35,6 +33,4 @@ jobs:
       run: chmod +x node_modules/.bin/jest
 
     - name: Run tests
-      run: |
-        cd github-actions-js-demo
-        npx jest
+      run: npx jest
