--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,7 @@ jobs:
         node-version: [14, 16, 18]
 
     steps:
-    - name: Show current directory and files
-      run: |
-        pwd
-        ls -la
+    - uses: actions/checkout@v3
 
     - name: Set up Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
@@ -25,12 +22,16 @@ jobs:
 
     - name: Install dependencies
       run: npm ci
+      working-directory: ${{ github.workspace }}
 
     - name: Run ESLint
       run: npx eslint .
+      working-directory: ${{ github.workspace }}
 
     - name: Fix jest permissions
       run: chmod +x node_modules/.bin/jest
+      working-directory: ${{ github.workspace }}
 
     - name: Run tests
       run: npx jest
+      working-directory: ${{ github.workspace }}
