--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [14, 16, 18]
+        node-version: [16, 18]
 
     steps:
     - uses: actions/checkout@v3
@@ -19,7 +19,6 @@ jobs:
       run: |
         pwd
         ls -la
-      working-directory: ${{ github.workspace }}
 
     - name: Set up Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
@@ -28,16 +27,9 @@ jobs:
 
     - name: Install dependencies
       run: npm ci
-      working-directory: ${{ github.workspace }}
 
     - name: Run ESLint
       run: npx eslint .
-      working-directory: ${{ github.workspace }}
-
-    - name: Fix jest permissions
-      run: chmod +x node_modules/.bin/jest
-      working-directory: ${{ github.workspace }}
 
     - name: Run tests
       run: npx jest
-      working-directory: ${{ github.workspace }}
